--- a/nodejs_by_NodeBR/01-npm/package.json
+++ b/nodejs_by_NodeBR/01-npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "01-npm",
   "version": "1.0.0",
-  "description": "Aula 01 - curso nodejs by NodeBR",
+  "description": "Aula 01 - Curso NodeJS by NodeBR",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
